--- a/Swimmer_seller/app/src/main/res/layout/item_chip_input.xml
+++ b/Swimmer_seller/app/src/main/res/layout/item_chip_input.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:checkable="false"
+    android:text="태그"
     app:closeIconEnabled="true">
 
 </com.google.android.material.chip.Chip>
