--- a/Swimmer_seller/app/src/main/res/layout/item_image_slider.xml
+++ b/Swimmer_seller/app/src/main/res/layout/item_image_slider.xml
@@ -2,7 +2,6 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imageViewSlider"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scaleType="centerCrop">
+    android:layout_height="match_parent">
 
 </ImageView>
