--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,8 +8,7 @@
     android:orientation="vertical"
     tools:context=".ui.product.ProductDetailFragment" >
 
-
-    <!-- 백버튼 툴바 -->
+    <!-- 백버튼 툴바 (무조건 고정) -->
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_product_detail"
         android:layout_width="match_parent"
@@ -24,158 +22,152 @@
         app:titleTextColor="@color/white"
         app:layout_collapseMode="pin"/>
 
+    <!-- 실제 컨텐츠 영역 -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarProductMain"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbarMain"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarProductMain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="wrap_content">
 
-            <!-- 상품 기본 정보 -->
-            <LinearLayout
+            <!--스크롤 되면서 접히는 영역-->
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarMain"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <!-- 상품 메인 이미지 -->
-                <FrameLayout
-                    android:id="@+id/frameLayoutProductMainImage"
+                <!-- 상품 기본 정보 -->
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/viewPagerMainImage"
+                    <!-- 상품 메인 이미지 -->
+                    <FrameLayout
+                        android:id="@+id/frameLayoutProductMainImage"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"/>
+                        android:layout_height="wrap_content">
 
-                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-                        android:id="@+id/dotsIndicator"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
-                        app:dotsColor="@color/md_theme_light_outline"
-                        app:selectedDotColor="@color/seed"
-                        app:dotsCornerRadius="8dp"
-                        app:dotsSize="8dp"
-                        app:dotsSpacing="4dp"
-                        app:dotsWidthFactor="2.5" />
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/viewPagerMainImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
 
-                </FrameLayout>
+                        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                            android:id="@+id/dotsIndicator"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom|center_horizontal"
+                            android:layout_marginTop="8dp"
+                            app:dotsColor="@color/md_theme_light_outline"
+                            app:dotsCornerRadius="8dp"
+                            app:dotsSize="8dp"
+                            app:dotsSpacing="4dp"
+                            app:dotsWidthFactor="2.5"
+                            app:selectedDotColor="@color/seed" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    </FrameLayout>
 
-                    <TextView
-                        android:id="@+id/textViewImageIdx"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="20dp">
 
-                    <TextView
-                        android:id="@+id/textViewImageCount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text=" / 2"
-                        android:textColor="@color/md_theme_dark_outline" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textViewProductBarndName"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="브랜드명" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/buttonShare"
+                                style="@style/Widget.Material3.Button.IconButton"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:minWidth="0dp"
+                                android:minHeight="0dp"
+                                android:padding="0dp"
+                                app:icon="@drawable/ios_share_24px"
+                                app:iconSize="24dp" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/textViewProductCategory"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="대분류 > 중분류 > 소분류"
+                            android:textColor="@color/md_theme_light_outline" />
+
+                        <TextView
+                            android:id="@+id/textViewProductName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="상품명"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                        <TextView
+                            android:id="@+id/textViewProductPrice"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="가격"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textStyle="bold" />
+
+                        <com.google.android.material.chip.ChipGroup
+                            android:id="@+id/chipGroupProductHashTag"
+                            style="@style/Widget.Material3.ChipGroup"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp">
+
+                        </com.google.android.material.chip.ChipGroup>
+                    </LinearLayout>
+
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textViewProductCategory"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="대분류 > 중분류 > 소분류"
-                    android:textColor="@color/md_theme_light_outline" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                <TextView
-                    android:id="@+id/textViewProductBarndName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드명" />
+            <!--스크롤 되면서 남는 TabLayout : CollapsingToolbarLayout이 접히면서 따라 올라가질뿐 실제론 스크롤 대상에서 제외-->
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+                app:layout_collapseMode="pin"/>
 
-                <TextView
-                    android:id="@+id/textViewProductName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="상품명"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textViewProductPrice"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="가격"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/buttonShare"
-                        style="@style/Widget.Material3.Button.IconButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:minWidth="0dp"
-                        android:minHeight="0dp"
-                        android:padding="0dp"
-                        app:icon="@drawable/ios_share_24px"
-                        app:iconSize="24dp" />
-                </LinearLayout>
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chipGroupProductHashTag"
-                    style="@style/Widget.Material3.ChipGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.chip.ChipGroup>
-
-            </LinearLayout>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nested_scroll_view"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- 상품상세, 상품리뷰, 상품QnA -->
+
+        </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabProductDetail"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabMode="fixed"
-            app:layout_collapseMode="pin"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- 상품상세, 상품리뷰, 상품QnA -->
-
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabProductDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:src="@drawable/arrow_upward_24px"
-        app:fabSize="auto" />
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/arrow_upward_24px"
+            app:fabSize="auto" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </LinearLayout>
