fix : 상품 상세에서 목록으로 다시 돌아갔을 때 이전에 선택해둔 필터링, 정렬 유지

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
@@ -139,6 +139,39 @@
                     <com.google.android.material.divider.MaterialDivider
                         android:layout_width="match_parent"
                         android:layout_height="5dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="20dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="사이즈" />
+
+                            <com.google.android.material.textfield.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+                            </com.google.android.material.textfield.TextInputLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:layout_width="match_parent"
+                        android:layout_height="5dp" />
                 </LinearLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
