--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail_tab.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.product.tab.ProductDetailTabFragment" >
+    android:padding="10dp"
+    tools:context=".ui.product.tab.ProductDetailTabFragment">
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/textViewProductDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+    <ImageView
+        android:id="@+id/imageViewProductDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/loading_placeholder" />
 </LinearLayout>
