--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
@@ -44,7 +44,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:editable="false"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:text="전체"
+                    app:simpleItems="@array/productFilter"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -60,7 +62,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:editable="false"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:text="최신순"
+                    app:simpleItems="@array/productSort"/>
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
