feat : 색상, 사이즈 리스트

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_option.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_option.xml
@@ -72,7 +72,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textViewColor"
+                        android:id="@+id/textViewProductColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
