--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
@@ -134,39 +134,40 @@
                             android:layout_marginTop="5dp">
 
                         </com.google.android.material.chip.ChipGroup>
-                    </LinearLayout>
 
-                    <com.google.android.material.divider.MaterialDivider
-                        android:layout_width="match_parent"
-                        android:layout_height="5dp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/textInputLayoutProductColor"
+                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="20dp">
+                            android:layout_marginTop="5dp">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="사이즈" />
-
-                            <com.google.android.material.textfield.TextInputLayout
+                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                                android:id="@+id/textViewProductColor"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:inputType="none"
+                                android:paddingTop="0dp"
+                                android:paddingBottom="0dp"
+                                android:text="색상" />
+                        </com.google.android.material.textfield.TextInputLayout>
 
-                                <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
-                            </com.google.android.material.textfield.TextInputLayout>
 
-                        </LinearLayout>
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/textInputLayoutProductSize"
+                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
+                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                                android:id="@+id/textViewProductSize"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="none"
+                                android:paddingTop="0dp"
+                                android:paddingBottom="0dp"
+                                android:text="사이즈" />
+                        </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
 
                     <com.google.android.material.divider.MaterialDivider
