--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
@@ -45,8 +45,9 @@
                     android:layout_marginEnd="10dp"
                     android:editable="false"
                     android:inputType="none"
+                    android:padding="10dp"
                     android:text="전체"
-                    app:simpleItems="@array/productFilter"/>
+                    app:simpleItems="@array/productFilter" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -63,8 +64,9 @@
                     android:layout_height="wrap_content"
                     android:editable="false"
                     android:inputType="none"
+                    android:padding="10dp"
                     android:text="최신순"
-                    app:simpleItems="@array/productSort"/>
+                    app:simpleItems="@array/productSort" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
