feat : 상품 상세 탭 레이아웃

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail.xml
@@ -19,8 +19,7 @@
         app:navigationIcon="@drawable/arrow_back_24px"
         app:navigationIconTint="@color/white"
         app:title="상품 상세"
-        app:titleTextColor="@color/white"
-        app:layout_collapseMode="pin"/>
+        app:titleTextColor="@color/white" />
 
     <!-- 실제 컨텐츠 영역 -->
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -184,7 +183,7 @@
                 android:layout_height="wrap_content"
                 app:tabGravity="fill"
                 app:tabMode="fixed"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
