--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_detail_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_detail_tab.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <ImageView
         android:id="@+id/imageViewProductDescription"
@@ -22,4 +22,5 @@
         android:layout_marginTop="10dp"
         android:adjustViewBounds="true"
         android:src="@drawable/loading_placeholder" />
+
 </LinearLayout>
