--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_review_tab.xml
@@ -4,11 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.product.tab.ProductReviewTabFragment" >
+    android:padding="10dp"
+    tools:context=".ui.product.tab.ProductReviewTabFragment">
 
-    <TextView
-        android:id="@+id/textView29"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="리뷰 화면" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView29"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="상품후기 | "
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(0)"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    </LinearLayout>
+
 </LinearLayout>
