nav_graph 로직 변경, 화면 전환 애니메이션(slide),로그아웃 // 로그인 버그수정

--- a/Swimmer_customer/app/src/main/res/layout/fragment_address_dialog.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_address_dialog.xml
@@ -4,7 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbarAddressDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Toolbar_Swimmer_Customer" />
     <WebView
         android:id="@+id/webViewAddress"
         android:layout_width="match_parent"
