--- a/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_customer/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -3,26 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_nav_graph"
-    app:startDestination="@+id/LoginFragment">
+    app:startDestination="@+id/item_home">
 
     <!-- Fragments and actions from nav_graph.xml -->
     <fragment
         android:id="@+id/MainFragment"
         android:name="com.petpal.swimmer_customer.ui.main.MainFragment"
-        android:label="main_Fragment"
         tools:layout="@layout/fragment_main">
-        <action
-            android:id="@+id/action_mainFragment_to_loginFragment"
-            app:destination="@id/LoginFragment" />
         <action
             android:id="@+id/action_MainFragment_to_item_home"
             app:destination="@id/item_home" />
+        <action
+            android:id="@+id/action_MainFragment_to_item_mypage"
+            app:destination="@id/item_mypage"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
     <fragment
         android:id="@+id/LoginFragment"
         android:name="com.petpal.swimmer_customer.ui.login.LoginFragment"
-        android:label="login_fragment"
         tools:layout="@layout/fragment_login">
 
         <action
@@ -41,13 +43,23 @@
             app:popExitAnim="@anim/slide_out_right"/>
         <action
             android:id="@+id/action_loginFragment_to_mainFragment"
-            app:destination="@id/MainFragment" />
+            app:destination="@id/MainFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_LoginFragment_to_item_home"
+            app:destination="@id/item_home"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
     <fragment
         android:id="@+id/RegisterFragment"
         android:name="com.petpal.swimmer_customer.ui.register.RegisterFragment"
-        android:label="register_fragment"
         tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_RegisterFragment_to_LoginFragment"
@@ -56,51 +68,87 @@
     <fragment
         android:id="@+id/DeliveryPointManageFragment"
         android:name="com.petpal.swimmer_customer.ui.deliverypointmanage.DeliveryPointManageFragment"
-        android:label="deliverypointmanage_fragment"
+
         tools:layout="@layout/fragment_delivery_point_manage">
 
         <action
             android:id="@+id/action_DeliveryPointManageFragment_to_item_mypage"
-            app:destination="@id/item_mypage" />
+            app:destination="@id/item_mypage"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_DeliveryPointManageFragment_to_AddressDialogFragment"
+            app:destination="@id/AddressDialogFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_DeliveryPointManageFragment_to_DetailAddressFragment"
+            app:destination="@id/DetailAddressFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_DeliveryPointManageFragment_to_item_home"
+            app:destination="@id/item_home"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/DetailAddressFragment"
         android:name="com.petpal.swimmer_customer.ui.detailAddress.DetailAddressFragment"
-        android:label="detailaddress_fragment"
         tools:layout="@layout/fragment_detail_address">
+
+        <action
+            android:id="@+id/action_DetailAddressFragment_to_DeliveryPointManageFragment"
+            app:destination="@id/DeliveryPointManageFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
 
     <fragment
         android:id="@+id/AddressDialogFragment"
         android:name="com.petpal.swimmer_customer.ui.deliverypointmanage.AddressDialogFragment"
-        android:label="addressdialog_fragment"
         tools:layout="@layout/fragment_address_dialog">
 
+
+
+        <action
+            android:id="@+id/action_AddressDialogFragment_to_DetailAddressFragment"
+            app:destination="@id/DetailAddressFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/MyreviewFragment"
         android:name="com.petpal.swimmer_customer.ui.myreview.MyReviewFragment"
-        android:label="myreview_fragment"
         tools:layout="@layout/fragment_my_review">
     </fragment>
     <fragment
         android:id="@+id/CheckPasswordFragment"
         android:name="com.petpal.swimmer_customer.ui.modifyinfo.CheckPasswordFragment"
-        android:label="checkpassword_fragment"
         tools:layout="@layout/fragment_check_password">
     </fragment>
     <fragment
         android:id="@+id/ModifyInfoFragment"
         android:name="com.petpal.swimmer_customer.ui.modifyinfo.ModifyInfoFragment"
-        android:label="modifyinfo_fragment"
         tools:layout="@layout/fragment_modify_info">
     </fragment>
 
     <fragment
         android:id="@+id/FindInfoFragment"
         android:name="com.petpal.swimmer_customer.ui.findinfo.FindInfoFragment"
-        android:label="findInfo_fragment"
         tools:layout="@layout/fragment_find_info">
 
         <action
@@ -110,7 +158,7 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"
-             />
+            />
     </fragment>
 
     <!-- Original fragments and actions from fragment_nav_graph.xml -->
@@ -134,6 +182,14 @@
         <action
             android:id="@+id/action_item_home_to_itemDetailFragment"
             app:destination="@id/itemDetailFragment" />
+        <action
+            android:id="@+id/action_item_home_to_item_mypage"
+            app:destination="@id/item_mypage"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            />
     </fragment>
     <fragment
         android:id="@+id/item_history"
@@ -154,7 +210,11 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_itemDetailFragment_to_paymentFragment"
-            app:destination="@id/paymentFragment" />
+            app:destination="@id/paymentFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/paymentFragment"
@@ -183,12 +243,34 @@
         tools:layout="@layout/fragment_mypage">
         <action
             android:id="@+id/action_item_mypage_to_DeliveryPointManageFragment"
-            app:destination="@id/DeliveryPointManageFragment" />
+            app:destination="@id/DeliveryPointManageFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
 
 
         <action
             android:id="@+id/action_item_mypage_to_LoginFragment"
-            app:destination="@id/LoginFragment" />
+            app:destination="@id/LoginFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_item_mypage_to_item_home"
+            app:destination="@id/item_home"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_item_mypage_to_MainFragment"
+            app:destination="@id/MainFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
 </navigation>
